syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package profile.proto.v2;

option go_package = "profile/proto/v2;profile";

message User{
    string name = 1;
    string email = 2;
    string address = 3;
    string cpf = 4;
    string phone = 5;
    google.protobuf.Timestamp birthday = 6;
}

message ListUser{
    repeated User users = 1;
}

message UserRequest{
    string id = 1;
}

message ListUserRequest{
    repeated string id = 1;
}

service UserService {
    rpc CreateUser(User) returns (google.protobuf.Empty) {
    }

    rpc FindUser(UserRequest) returns (User) {
    }

    rpc UpdateUser(User) returns (google.protobuf.Empty) {
    }

    rpc ListUsers(ListUserRequest) returns (ListUser) {
    }

    rpc DeleteUser(UserRequest) returns (google.protobuf.Empty) {
    }
}

message Account{
    string user_id = 1;
    double balance = 2;
    string agency = 3;
    string bank = 4;
    string key = 5;
}

message ListAccount{
    repeated Account account = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
}

message AccountRequest{
    string account_id = 1;
}

message ListAccountRequest{
    repeated string account_id = 1;
}

service AccountService {
    rpc CreateAccount(Account) returns (Account) {
    }

    rpc FindAccount(Account) returns (Account) {
    }

    rpc UpdateAccount(Account) returns (google.protobuf.Empty) {
    }

    rpc ListAccounts(ListAccountRequest) returns (ListAccount) {
    }

    rpc DeleteAccount(AccountRequest) returns (google.protobuf.Empty){
    }
}
enum Type {
    cpf = 0;
    phone = 1;
    email = 2;
    random = 3;

}
message Key {
    string account_id = 1;
    string name = 2;
    Type type = 3;
}
message ListKeyRequest{
    repeated string key_id = 1;
}
message KeyRequest{
    string key_id = 1;
}

message ListKeys{
    repeated Key keys = 1;
}
service KeysService {
    rpc CreateKey(Key) returns (google.protobuf.Empty) {
    }

    rpc UpdateKey(Key) returns (google.protobuf.Empty) {
    }

    rpc ListKey(ListKeyRequest) returns (ListKeys) {
    }

    rpc DeleteKey(KeyRequest) returns (google.protobuf.Empty){
    }

}

message PixTransaction {
    string id = 1;
    string user_id = 2;
    string SenderKey = 3;
    string ReceiverKey = 4;
    double amount = 5;
    google.protobuf.Timestamp hour  = 6;
    string status = 7;
}

message CreatePixTransactionRequest {
    PixTransaction pix_transaction = 1;
}

message ListPixRequest {
    repeated string id = 1;
}

message ListPix {
    repeated PixTransaction pix_transactions = 1;
}

service PixTransactionService {
    rpc CreatePixTransaction(CreatePixTransactionRequest) returns (PixTransaction) {}
    rpc ListPixTransactions(ListPixRequest) returns (ListPix){}
}